Fix iOS device issues concerning splash being too small

--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -137,12 +137,13 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: var(--color-four);;
+    background: white;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 60%;
+    height: 100%;
+    max-height: 1280px;
     top: 0;
     left: 0;
     position: fixed !important;
@@ -185,7 +186,7 @@ a.pure-button-primary {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 60%;
+    top: 100%;
     width: 100%;
     min-height: 12%;
     z-index: 2;
